--- a/css/modal/modal-responsive.css
+++ b/css/modal/modal-responsive.css
@@ -22,4 +22,12 @@
   .modal__title {
     font-size: 1.15rem;
   }
+
+  .modal__overlay {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 0;
+  }
 }
